<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="50dp"
            android:paddingVertical="100dp">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/name"
                android:inputType="text"
                android:text="" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/description"
                android:inputType="text"
                android:text="" />


            <EditText
                android:id="@+id/limitStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/limit_stock"
                android:inputType="number"
                android:text="" />

            <RadioButton
                android:id="@+id/canRefrigerateLocale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/deve_ser_refrigerado"
                android:text="@string/deve_ser_refrigerado" />

            <Spinner
                android:id="@+id/unity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <RadioButton
                android:id="@+id/canPromotion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/can_promotion" />

            <RadioButton
                android:id="@+id/perishable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/perishable" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="save"
                    android:text="@string/save" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>